; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_musb_otg.c_musbotg_set_address.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_musb_otg.c_musbotg_set_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.musbotg_softc = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"addr=%d\0A\00", align 1
@MUSB2_REG_FADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.musbotg_softc*, i32)* @musbotg_set_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @musbotg_set_address(%struct.musbotg_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.musbotg_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.musbotg_softc* %0, %struct.musbotg_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @DPRINTFN(i32 4, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* %4, align 4
  %8 = and i32 %7, 127
  store i32 %8, i32* %4, align 4
  %9 = load %struct.musbotg_softc*, %struct.musbotg_softc** %3, align 8
  %10 = load i32, i32* @MUSB2_REG_FADDR, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @MUSB2_WRITE_1(%struct.musbotg_softc* %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @DPRINTFN(i32, i8*, i32) #1

declare dso_local i32 @MUSB2_WRITE_1(%struct.musbotg_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
